fix: resolve Hibernate and Mockito compilation errors
- Remove precision/scale from Double column in PersonalizedRecommendation.java
- Fix EXTRACT function query in UserEventRepository.java for getAverageCompletionTime
- Replace java.util.List.of() with Arrays.asList() in AnalyticsServiceTest.java